--- a/style.css
+++ b/style.css
@@ -1,546 +1,343 @@
 @import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&display=swap');
 
-:root {
-    --Strong-Cyan: hsl(171, 66%, 44%);
-    --Light-Blue: hsl(233, 100%, 69%);
-    --Dark-Grayish-Blue: hsl(210, 10%, 33%);
-    --Grayish-Blue: hsl(201, 11%, 66%);
-
-}
-
-* {
-    box-sizing: border-box;
+*{
     margin: 0;
     padding: 0;
-    font-size: 18px;
+    box-sizing: border-box;
+    font-family: 'Bai Jamjuree', sans-serif;
 }
 
-ul {
-    list-style-type: none;
+img{
+    max-width: 100%;
+}
+ul{
+    list-style: none;
 }
 
-a {
-    text-decoration: none;
+h1, h2, h3{
+    color: hsl(210, 10%, 33%) ;
 }
 
-body {
-    font-family: "Bai Jamjuree", sans-serif;
+p{
+    color: hsl(201, 11%, 66%);
+    line-height: 1.8;
 }
 
-.container {
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto;
-}
-header {
-    width: 100%;
-    height: 100vh;
-    background-image: url(images/bg-header-desktop.png);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-}
-
-
-
-header .container {
+body{
     text-align: center;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
 }
 
-header .container img {
-    width: 100px;
-    align-self: center;
-}
 
-header .container h1 {
-    font-size: 45px;
-    color: var(--Dark-Grayish-Blue);
-}
-
-header .container p {
-    width: 70%;
-    margin: 0 auto;
-    color: var(--Grayish-Blue);
-}
-
-header .container .buttons {
-    width: 40%;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
-header .container .buttons .down {
-    width: 45%;
-    border: none;
-    padding: 20px;
+.btn-ios{
+    background-color: hsl(171, 66%, 44%);
+    color:#fff;
+    padding: 1rem 3rem;
     border-radius: 30px;
-    color: #fff;
-    font-size: 20px;
+    font-weight: bold;
+    font-size: 1.2rem;
+    border: none;
+    box-shadow: 3px 4px 10px hsl(171, 66%, 44%, 0.4);
     transition: 0.5s;
     cursor: pointer;
-    border-bottom: 4px solid;
+    border-bottom: 4px solid hsl(171, 66%, 36%, 0.5);
 }
-
-header .container .buttons .down:hover {
+.btn-ios:hover {
     transform: scale(1.099);
+    background-color: hsla(171, 66%, 44%, 0.7);
+    border-bottom: 4px solid hsl(171, 66%, 44%, 0.7);
 }
 
-header .container .buttons .down-ios {
-    background-color: var(--Strong-Cyan);
-    border-color: hsl(171, 66%, 36%);
-    box-shadow: 4px 30px -5px hsl(171, 66%, 36%, 0.5);
-}
-
-header .container .buttons .down-mac {
-    background-color: var(--Light-Blue);
-    border-color: hsl(233, 100%, 65%);
-    box-shadow: 4px 30px -5px hsl(233, 100%, 65%, 0.5);
-}
-
-.head {
-    width: 90%;
-    text-align: center;
-    margin: 0 auto;
-    margin-bottom: 30px;
-}
-
-.head h2 {
-    color: var(--Dark-Grayish-Blue);
-    margin-bottom: 20px;
-    font-size: 32px;
-
-}
-
-.head p {
-    color: var(--Grayish-Blue);
-}
-
-.snip {
-    padding: 50px;
-    margin-bottom: 30px;
-}
-
-.snip .snipp {
-    width: 100%;
-    display: flex;
-    align-items: center;
-}
-
-.snip .img {
-    width: 50%;
-    height: 470px;
-}
-
-.snip .img img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-    position: relative;
-    left: -150px;
-}
-
-.snip .info {
-    width: 45%;
-    display: flex;
-    flex-direction: column;
-}
-
-
-.snip .info li {
-    padding: 15px;
-    margin-bottom: 20px;
-}
-
-.snip .info h3 {
-    color: var(--Dark-Grayish-Blue);
-    margin-bottom: 10px;
-}
-
-.snip .info p {
-    color: var(--Grayish-Blue);
-}
-  
-.photos {
-    padding: 50px 0;
-}
-
-.photos .img {
-    width: 700px;
-    margin: 0 auto;
-    text-align: center;
-
-}
-
-
-.photos .img img {
-    width: 100%;
-    max-width: 100%;
-    margin-bottom: 50px;
-}
-
-.workflow {
-    margin-bottom: 30px;
-}
-
-.workflow .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-
-.workflow .container .coulmn {
-    text-align: center;
-    width: 300px;
-    height: 250px;
-    padding: 15px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.workflow .container .coulmn img {
-    height: 30%;
-}
-
-.workflow .container .coulmn h3 {
-    color: var(--Dark-Grayish-Blue);
-    height: 15%;
-}
-
-
-.workflow .container .coulmn p {
-    color: var(--Grayish-Blue);
-    height: 40%;
-    line-height: 30px;
-}
-
-
-
-.Compaines {
-    padding: 50px 0;
-    margin-bottom: 30px;
-}
-
-.Compaines .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.Compaines .container img {
-    width: 150px;
-    max-width: 100%;
-}
-
-
-.info {
-    width: 100%;
-    height: 45vh;
-    margin-bottom: 30px;
-}
-
-.info .container {
-    text-align: center;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-}
-
-.info .container h1 {
-    font-size: 45px;
-    color: var(--Dark-Grayish-Blue);
-}
-
-.info .container p {
-    width: 70%;
-    margin: 0 auto;
-    color: var(--Grayish-Blue);
-}
-
-.info .container .buttons {
-    width: 40%;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.info .container .buttons .down {
-    width: 45%;
-    border: none;
-    padding: 20px;
-    border-radius: 30px;
+.btn-mac{
+    background-color: hsl(233, 100%, 69%) ;
     color: #fff;
-    font-size: 20px;
+    padding: 1rem 3rem;
+    border-radius: 30px;
+    font-weight: bold;
+    font-size: 1.2rem;
+    border: none;
+    box-shadow: 3px 4px 10px hsl(233, 100%, 69%, 0.4);
     transition: 0.5s;
     cursor: pointer;
-    border-bottom: 4px solid;
+    border-bottom: 4px solid hsl(233, 100%, 65%, 0.5);
 }
 
-.info .container .buttons .down:hover {
+.btn-mac:hover {
     transform: scale(1.099);
-}
+    background-color: hsl(233, 100%, 69%, 0.7);
+    border-bottom: 4px solid hsl(233, 100%, 69%, 0.7);
 
-.info .container .buttons .down-ios {
-    background-color: var(--Strong-Cyan);
-    border-color: hsl(171, 66%, 36%);
-    box-shadow: 4px 30px -5px hsl(171, 66%, 36%, 0.5);
-}
-
-.info .container .buttons .down-mac {
-    background-color: var(--Light-Blue);
-    border-color: hsl(233, 100%, 65%);
-    box-shadow: 4px 30px -5px hsl(233, 100%, 65%, 0.5);
 
 }
 
-
-
-footer {
-    padding: 50px 0;
-    background-color: #eeeeee;
+.picture{
+    position: absolute;
+    width: 100%;
+}
+picture img{
+    width: 100%;
 }
 
-footer .container {
+.header{
+    padding: 8rem 1.5rem;
+    text-align: center;
+}
+
+.header h1{
+    font-size: 2rem;
+    margin: 2rem 0 1rem;
+}
+ .header p{
+     margin-bottom: 2rem;
+ }
+
+ .header ul{
+     display: flex;
+     flex-direction: column;
+     gap: 1rem;
+     align-items: center;
+     justify-content: center;
+ }
+
+ .snipp{
+     padding: 0 1.5rem 8rem;
+ }
+ .snipp article:first-child h2{
+     margin-bottom: 1rem;
+ }
+.snipp article:first-child p{
+    margin-bottom: 2.5rem;
+}
+
+.snipp .snippets > article:first-child{
+    margin-bottom: 3rem;
+}
+
+.snipp .snippets > article:last-child{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 1rem;
+}
+
+.snipp .snippets > article:last-child h3{
+    margin-bottom: 0.5rem;
+}
+
+.photos{
+    padding: 0 1.5rem 8rem;
+}
+
+.photos article h2{
+    margin-bottom: 1rem;
+}
+
+.photos article p{
+    margin-bottom: 3rem;
+}
+
+.workflow{
+    padding: 0 1.5rem 8rem;
+}
+
+.workflow > article:first-child h2{
+    margin-bottom: 1rem;
+}
+
+.workflow > article:first-child p{
+    margin-bottom: 3rem;
+}
+
+.workflow .card{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 3rem;
+}
+
+.workflow .card  article img{
+    margin-bottom: 2rem;
+}
+
+.workflow .card  article h3{
+    margin-bottom: 1rem;
+}
+
+.companies{
+    padding: 0 1.5rem 8rem;
+}
+
+.companies ul{
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
+    gap: 2rem;
 }
 
-footer .container img {
-    width: 60px;
-    height: 60px;
-    max-width: 100%;
+.companies ul li img{
+    width: 8rem;
 }
 
-footer .container .links {
-    width: 500px;
+.info{
+    padding: 0 1.5rem 8rem;
+}
+
+.info h2{
+    margin-bottom: 1rem;
+}
+
+.info p{
+    margin-bottom: 3rem;
+}
+
+.info ul {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
     align-items: center;
-
+    justify-content: center;
+    gap: 1rem;
 }
 
-footer .container .links li {
-    width: fit-content;
-    margin: 15px 0;
+
+.container{
+    background-color: rgba(238, 238, 238, 0.75);
+    padding: 4rem 1.5rem;
 }
 
-footer .container .links a {
-    color: var(--Dark-Grayish-Blue);
+footer article{
+    margin-bottom: 3rem;
 }
 
-footer .container .links a:hover{
-    color: var(--Strong-Cyan);
+footer article img {
+    width: 4rem;
 }
 
-footer .container .Socialmedia {
-    width: 110px;
+footer ul li{
+    margin-bottom: 1rem;
+}
+
+footer ul li button{
+    background-color: transparent;
+    color: hsl(210, 10%, 33%);
+    font-size: 1rem;
+    border: none;
+    cursor: pointer;
+    transition: 0.5s;
+}
+footer ul li button:hover{
+    color: hsl(171, 66%, 44%);
+}
+
+footer ul.social-media{
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    justify-content: center;
+    gap: 2rem;
+    margin-top: 3rem;
 }
 
-footer .container .Socialmedia li a img {
-    width: 20px;
-    height: 20px;
-    max-width: 100%;
+footer ul.social-media img{
+    transition: 0.5s;
 }
-footer .Socialmedia a:hover img {
+
+footer ul.social-media img:hover{
     filter: invert(50%) sepia(100%) saturate(1000%) hue-rotate(120deg) brightness(100%) contrast(100%);
 }
-
-@media(max-width: 768px) {
-    header {
-        height: auto;
-        background-size: cover;
+@media (min-width: 1024px){
+    h2{
+        font-size: 2rem;
     }
-
-    header .container {
-        padding: 20px;
-        text-align: center;
-        height: auto;
-        justify-content: center;
+    .header h1{
+        font-size: 3rem;
     }
-
-    header .container h1 {
-        font-size: 32px;
+    .header p{
+        width: 600px;
+        margin: 0 auto 3rem;
     }
-    header .container p{
-        margin: 30px 0;
-        line-height: 30px;
+    .header ul{
+        flex-direction: row;
     }
-
-    header .container .buttons {
-        width: 100%;
-        flex-direction: column;
+    .snipp{
+        max-width: 1200px;
+        margin: auto;
+        padding-bottom: 20rem;
     }
-
-    header .container .buttons .down {
-        width: 80%;
-        margin: 10px 0;
-        font-size: 18px;
-    }
-}
-@media(max-width: 768px) {
-    .snip .snipp {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .snip .img {
-        width: 100%;
-        height: auto;
-    }
-
-    .snip .info {
-        width: 100%;
+    .snipp > article:first-child{
         text-align: center;
     }
-}
-@media(max-width: 768px) {
-    .workflow .container {
-        flex-direction: column;
+    .snipp > article:first-child p{
+        width: 620px;
+        margin: 0 auto 6rem;
     }
-
-    .workflow .container .coulmn {
-        width: 100%;
-        margin-bottom: 20px;
-    }
-    .workflow .container .coulmn img {
-        height: 15%;
-    }
-}
-@media(max-width: 768px) {
-    .Compaines .container {
-        flex-direction: column;
+    .snipp .snippets{
+        position: relative;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 4rem;
         align-items: center;
     }
-
-    .Compaines .container img {
-        margin: 10px 0;
-        width: 100px;
+    .snipp .snippets > article:first-child img{
+        position: absolute;
+        top:-20%;
+        left: -20vw;
+        width: 50rem;
     }
-}
-@media(max-width: 768px) {
-    footer {
-        padding: 20px 10px;  
-        text-align: center;  
+    .photos{
+        max-width: 1200px;
+        margin: auto;
+        text-align: center;
     }
-
-    footer .container {
-        flex-direction: column;  
-        align-items: center;  
+    .photos p{
+        width: 500px;
+        margin: 0 auto 3rem;
     }
-
-    footer .container img {
-        margin-bottom: 20px; 
+    .workflow{
+        text-align: center;
+        max-width: 1200px;
+        margin: auto;
     }
-
-    footer .container .links {
-        flex-direction: column;  
-        align-items: center;  
-        padding: 0 20px;  
+    .workflow .card{
+        grid-template-columns: repeat(3, 1fr);
     }
-
-    footer .container .links li {
-        margin-bottom: 10px;  
+    .companies{
+        max-width: 1200px;
+        margin: auto;
     }
-
-    footer .container .Socialmedia {
-        margin-top: 20px;  
-        width: 100%;  
-        justify-content: center;
-        flex-direction: column;  
-    }
-
-    footer .container .Socialmedia li a img {
-        width: 30px;  
-        height: 30px;
-    }
-}
-@media(max-width: 768px) {
-    .info {
-        height: auto;  
-        margin-bottom: 20px;  
-    }
-
-    .info .container {
-        padding: 20px;  
-        text-align: center;  
-        justify-content: center; 
-    }
-
-    .info .container h1 {
-        font-size: 32px;  
-        margin-bottom: 15px;  
-    }
-
-    .info .container p {
-        width: 90%;  
-        font-size: 16px;  
-        margin-bottom: 20px;  
-    }
-
-    .info .container .buttons {
-        width: 100%;  
-        flex-direction: column;  
-    }
-
-    .info .container .buttons .down {
-        width: 80%;  
-        margin: 10px auto;  
-        font-size: 18px;  
-    }
-}
-@media(max-width: 768px) {
-    .photos {
+    .companies ul{
         display: flex;
-        flex-direction: column;  
-        align-items: center;  
-        padding: 20px;  
+        flex-direction: row;
+        gap: 6rem;
     }
-
-    .photos .img {
-        width: 100%;  
-        text-align: center; 
-        margin-bottom: 20px; 
+    .info{
+        max-width: 1200px;
+        margin: auto;
+        text-align: center;
     }
-
-    .photos .img img {
-        width: 90%;  
-        height: auto;  
-        border-radius: 10px;  
+    .info p{
+        width: 500px;
+        margin: 0 auto 3rem;
     }
-
-    .photos .head {
-        width: 100%;  
-        text-align: center;  
+    .info ul{
+        flex-direction: row;
     }
-
-    .photos .head h2 {
-        font-size: 24px;  
-        margin-bottom: 15px;  
+    footer{
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        max-width: 1200px;
+        margin: auto;
+        text-align: left;
     }
-
-    .photos .head p {
-        font-size: 16px;  
-        margin-bottom: 20px;  
+    footer article{
+        margin-bottom: 0;
+    }
+    footer ul {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+    footer ul li{
+        margin-bottom: 0;
+    }
+    footer ul.social-media{
+        flex-direction: row;
+        margin-top: 0;
     }
 }
-
-
-
-
